app-dep-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2
  labels:
    app: shroomate
    component: app-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shroomate
      component: app-v2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: shroomate
        component: app-v2
    spec:
      containers:
        - image: ghcr.io/strokovnjaka/shroomate:0.2.0
          name: app-v2
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: app
          readinessProbe:
            httpGet:
              path: /api/species
              port: app
            failureThreshold: 2
            periodSeconds: 22
          livenessProbe:
            tcpSocket:
              port: app
            failureThreshold: 2
            periodSeconds: 11
          startupProbe:
            tcpSocket:
              port: app
            failureThreshold: 30
            periodSeconds: 11
