app-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: shroomate
    component: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shroomate
      component: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: shroomate
        component: app
    spec:
      containers:
        - image: ghcr.io/strokovnjaka/shroomate:0.0.1
          name: app
          ports:
            - containerPort: 80
              name: app
