app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose-resolved.yml convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose-resolved.yml convert
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/devopdc-default: "true"
        io.kompose.service: app
    spec:
      containers:
        - env:
            - name: JWT_SECRET
              value: ThisIsMySecretYouShouldChangeIt
            - name: MONGODB_ATLAS_URI
              value: "mongodb://dc_mongo/shroomate"
            - name: NODE_ENV
              value: production
          image: dc_app
          name: dc-app
      hostname: dc_app
      restartPolicy: Always
