mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose-resolved.yml convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose-resolved.yml convert
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/devopdc-default: "true"
        io.kompose.service: mongo
    spec:
      containers:
        - image: dc_mongo_db
          name: dc-mongo-db
          volumeMounts:
            - mountPath: /data/db
              name: mongo-pvc
      hostname: dc_mongo
      restartPolicy: Always
      volumes:
        - name: mongo-pvc
          persistentVolumeClaim:
            claimName: mongo-pvc
