mongo-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  labels:
    app: shroomate
    component: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shroomate
      component: mongo
  serviceName: mongo
  template:
    metadata:
      labels:
        app: shroomate
        component: mongo
    spec:
      containers:
      - image: mysql:5.6
        name: mongo
        ports:
        - containerPort: 27017
          name: mongo
        volumeMounts:
        - name: mongo-data
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
