app-svc-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-v2
  labels:
    app: shroomate
    component: app-v2
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: shroomate
    component: app-v2
  type: ClusterIP
