app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: shroomate
    component: app
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: shroomate
    component: app
  type: ClusterIP
