mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: shroomate
    component: mongo
spec:
  ports:
    - port: 27017
  selector:
    app: shroomate
    component: mongo
  clusterIP: None
